history - fix blurring image issues

--- a/src/public/less/pages/history.less
+++ b/src/public/less/pages/history.less
@@ -136,6 +136,9 @@
 			justify-content: center;
 
 			width: 100%;
+			@media (max-width: @screen-xs-max) {
+				height: 120px;
+			}
 
 			.pos-left {
 				order: 0;
